project(tcp-homework)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_library(tcp_server STATIC tcp_server.cpp)
add_library(tcp_client STATIC tcp_client.cpp)
add_library(tcp_socket STATIC tcp_socket.cpp)
add_library(tcp_exception STATIC tcp_exception.cpp)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(BOOST_ROOT "boost2")
find_package(Boost COMPONENTS signals REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "-O2 -Wall -pthread -std=c++11")
add_executable(tcp_server_exec main_server.cpp)
add_executable(tcp_client_exec main_client.cpp)
target_link_libraries(tcp_server_exec tcp_server tcp_socket tcp_exception ${Boost_LIBRARIES})
target_link_libraries(tcp_client_exec tcp_client tcp_socket tcp_exception ${Boost_LIBRARIES})
