project(tcp-homework)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(BOOST_ROOT "boost2")
find_package(Boost REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})
add_definitions(${Qt5Widgets_DEFINITIONS})
include_directories(http-parser src/tcp-server src/http-server src/examples)
include_directories(${Boost_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS} -O2 -Wall -pthread -std=c++11")
add_library(tcp_server STATIC src/tcp-server/tcp_server.cpp src/tcp-server/tcp_socket.cpp src/tcp-server/epoll_handler.cpp src/tcp-server/tcp_exception.cpp)
add_library(tcp_client STATIC src/tcp-server/tcp_client.cpp src/tcp-server/tcp_socket.cpp src/tcp-server/epoll_handler.cpp src/tcp-server/tcp_exception.cpp)
#add_library(http_server STATIC src/http-server/http_response.cpp src/http-server/http_request.cpp src/http-server/http_connection.cpp src/http-server/http_server.cpp src/http-server/http_client.cpp)
#add_custom_target(http_server_api SOURCES src/http-server/http_server_api.h)
add_custom_target(tcp_server_api SOURCES src/tcp-server/tcp_server_api.h)
add_library(http_parser STATIC http-parser/http_parser.c)
QT5_WRAP_UI(UIS_HDRS
    src/examples/main_window.ui
)
add_executable(tcp_server_exec src/examples/main_server.cpp)
add_executable(tcp_client_exec src/examples/main_client.cpp)
#add_executable(http_server_exec src/examples/main_http_server.cpp)
#add_executable(chat_server_exec src/examples/main_chat_server.cpp)
#add_executable(chat_client_exec src/examples/main_chat_client.cpp src/examples/main_window.cpp ${UIS_HDRS})
target_link_libraries(tcp_server_exec tcp_server ${Boost_LIBRARIES})
target_link_libraries(tcp_client_exec tcp_client ${Boost_LIBRARIES})
#target_link_libraries(http_server_exec http_server http_parser tcp_server ${Boost_LIBRARIES})
#target_link_libraries(chat_server_exec http_server http_parser tcp_server ${Boost_LIBRARIES})
#target_link_libraries(chat_client_exec http_server http_parser tcp_client ${Boost_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5Core_LIBRARIES})
#qt5_use_modules(chat_client_exec Core Gui Widgets)
